Added new Z80 TBBlue opcodes and deleted obsolete ones
Added setting to change Kempston Mouse sensitivity
Added menu item to create autoconfig files (.config) 
Added setting --random-r-register to generate random value for R register on every cold start, instead of the normal 0 value. Useful to avoid same R register in the start of games, when they use that register as a random value

Improved debugger:
*Added bitwise operators AND (&), OR (|), XOR (^) when using registers breakpoints/watches
*New pseudo variables:
**OUTFIRED: returns 1 if last Z80 opcode was an OUT operation
**INFIRED: returns 1 if last Z80 opcode was an IN operation
**INTFIRED: returns 1 when an interrupt has been generated
* breakpoints actions do not reset keyboard 

Improved menu: 
* menu windows: now can have more lines than 22, doing scroll
* now you can write any ascii character on the menu
* now you can use binary numbers on expressions
* you can now scroll with mouse on windows with text contents and file selector menus, by clicking the right progress symbol (*)
* now you can move cursor up/down with mouse on windows with text contents and file selector by clicking new arrow buttons
* new file expander on file selector menu, using space key, for the following file types : .tap, .tzx, .dsk, .trd, .mdf, .hdf, .P, .O, Z88 Cards (.epr, .eprom, .flash)

Improved native snapshot format (ZSF):
* Added divmmc/divide state save

Fixed autoload tape on TBBlue
Fixed bug when smartload and selecting an unknown file type: if you cancel it, the inserted tape was modified
Fixed bug reading extension on files with no extension
Fixed bug reading AY registers: unused bits for registers are set to 0

Fixed bugs on esxdos handler:
*readdir call was incrementing PC register when there was no more files
*added ESXDOS_MODE_CREAT_TRUNC mode when opening files
*BCDE was not returning from a f_seek call
*fixed mode OPEN_CREAT|WRITE which has appending data after a seek instead of overwriting