@@ -11,6 +11,7 @@ Added new Z80 TBBlue opcodes and deleted obsolete ones
 Added setting to change Kempston Mouse sensitivity
 Added menu item to create autoconfig files (.config) 
 Added setting --random-r-register to generate random value for R register on every cold start, instead of the normal 0 value. Useful to avoid same R register in the start of games, when they use that register as a random value
+Added TBBlue Multiface emulation
 
 Improved debugger:
 *Added bitwise operators AND (&), OR (|), XOR (^) when using registers breakpoints/watches
@@ -44,6 +45,8 @@ Fixed bugs on esxdos handler:
 *added f_stat,f_unlink,f_rename,m_drive_info,f_sync calls
 *fixed loading help screen on esxdos nmi handler
 *fixed loading esxdos files with plus3dos header
+
+Fixed Multiface Three emulation
 
 Updated to the last Next SD image
 
